Chat button and the bottom to top button mobile view aligned fixed

--- a/src/components/GoToTop/GoToTop.css
+++ b/src/components/GoToTop/GoToTop.css
@@ -1,8 +1,8 @@
 .back-to-top-button {
   color: #ffffff;
   font-size: 1.875rem;
-  width: 3rem;
-  height: 3rem;
+  width: 4rem;
+  height: 4rem;
   background-color: #3bb77e;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
   border-radius: 50%;
@@ -27,4 +27,11 @@
 .back-to-top-button:hover {
   scale: 1.2;
   box-shadow: 0px 2px 4px 1px rgb(167, 253, 130);
+}
+
+@media screen and (max-width: 768px) {
+  .back-to-top-button {
+    right: 15vw;
+    bottom: 4px;
+  }
 }
